--- a/md/画像詳細図/トップページ.md
+++ b/md/画像詳細図/トップページ.md
@@ -3,5 +3,6 @@
 ### プロトタイプは以下のリンク先
 [プロトタイプ](https://www.figma.com/files/recent?fuid=983931705083120896)
 *****
-<img src="../img"
+<img src="../imgreadme.md" width="500">
+
 *****
