--- a/md/画像詳細図/トップページ.md
+++ b/md/画像詳細図/トップページ.md
@@ -6,3 +6,8 @@
 <img src="../imgreadme.md" width="500">
 
 *****
+
+| ID | 要素 | 内容 | アクション | イベント | 対応DB |
+|----|-----|------|------------|----------|--------|
+|1   |バナー|サイト名表示|-    |-          |-      |
+|2   |ログイン|テキスト画像|-  |-          |-      |
